[gd_scene load_steps=12 format=2]

[ext_resource path="res://Bodies/Gift/Gift.gd" type="Script" id=1]
[ext_resource path="res://Bodies/Gift/Sprites/Gift 01/Gift.png" type="Texture" id=2]
[ext_resource path="res://Bodies/Gift/Sprites/Explosion/01.png" type="Texture" id=3]
[ext_resource path="res://Bodies/Gift/Sprites/Explosion/02.png" type="Texture" id=4]
[ext_resource path="res://Bodies/Gift/Sprites/Explosion/03.png" type="Texture" id=5]
[ext_resource path="res://Bodies/Gift/Sprites/Explosion/04.png" type="Texture" id=6]
[ext_resource path="res://Bodies/Gift/Sprites/Explosion/05.png" type="Texture" id=7]
[ext_resource path="res://Bodies/Gift/Sprites/Explosion/06.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "Explosion",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19.2697, 15.9534 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 63.3735, 64.2069 )

[node name="Gift" type="KinematicBody2D"]
position = Vector2( 0, -0.880264 )
z_index = 2
z_as_relative = false
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
z_index = 8
z_as_relative = false
frames = SubResource( 1 )
animation = "Explosion"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -19.3012, 3.31006, -15.9926, 3.38701, -15.8387, 17.3141, -12.2992, 17.4679, -12.2223, 20.8535, 12.2463, 21.0844, 12.3232, 17.391, 15.8627, 17.5449, 15.8627, 3.31006, 19.1713, 3.38701, 19.3252, -10.3092, -19.2243, -10.3092 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Gift",
]]
editor/display_folded = true
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.8147e-006, 5.10322 )
shape = SubResource( 2 )

[node name="Area_Explosion" type="Area2D" parent="." groups=[
"Explosion",
]]
editor/display_folded = true
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Explosion"]
position = Vector2( -0.836243, 0 )
shape = SubResource( 3 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
